5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4346/executions/1577_1331.log
== TEST (2019-03-14 19:34:42) 
-- CODE:
print(50/3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:35:17) 
-- CODE:
print(50%/3)
-- ERROR:
File "XXXX", line 1
    print(50%/3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:35:29) 
-- CODE:
print(50/3)%

-- ERROR:
File "XXXX", line 1
    print(50/3)%
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
